--- a/.env.example
+++ b/.env.example
@@ -38,8 +38,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RECAPTCHA_KEY=
-RECAPTCHA_SECRET=
+RECAPTCHA_KEY=6LcH3IoUAAAAAKhV52iYxgas4OK3SEu8tknxf2kw
+RECAPTCHA_SECRET=6LcH3IoUAAAAAKIzU3VgvQGceOOsofyfiDSNoV14
 
 SCOUT_DRIVER=null
 ALGOLIA_APP_ID=
