--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ language: php
 php:
   - 7.1
 
-install:
-  - composer install --no-interaction
-
 before_script:
   - cp .env.travis .env
   - composer self-update
+  - composer install --no-interaction
+  - pear install pear/PHP_CodeSniffer
 
 script:
   - php artisan key:generate
