--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.6.3",
         "at.js": "^1.5.4",
+        "highlight.js": "^9.13.1",
+        "highlightjs": "^9.12.0",
         "jquery.caret": "^0.3.1",
         "moment": "^2.23.0",
         "trix": "^1.0.0",
