--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ RECAPTCHA_KEY=6LcH3IoUAAAAAKhV52iYxgas4OK3SEu8tknxf2kw
 RECAPTCHA_SECRET=6LcH3IoUAAAAAKIzU3VgvQGceOOsofyfiDSNoV14
 
 SCOUT_DRIVER=null
+SCOUT_QUEUE=true
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
 ALGOLIA_KEY=
