--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
+        "browser-sync": "^2.26.3",
+        "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
@@ -20,6 +22,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.16.0",
         "sass-loader": "^7.1.0",
+        "tailwindcss": "^0.4.3",
         "vue": "^2.5.22",
         "vue-template-compiler": "^2.5.22"
     },
@@ -31,6 +34,8 @@
         "jquery.caret": "^0.3.1",
         "moment": "^2.23.0",
         "trix": "^1.0.0",
-        "vue-instantsearch": "^1.7.0"
+        "vue-instantsearch": "^1.7.0",
+        "vue-js-modal": "^1.3.28",
+        "vue-template-compiler": "^2.5.13"
     }
 }
